# cpi-marinade-program

./: .gitignore  README.adoc
cpi-marinade/: .gitignore  Anchor.toml  README.adoc
cpi-marinade/programs/cpi-marinade/: Cargo.toml
cpi-marinade/programs/cpi-marinade/src/: lib.rs
cpi-marinade/tests/: cpi-marinade.ts
raw-marinade/: Anchor.toml  README.adoc  Test.toml  package.json
raw-marinade/idl/: marinade_finance.json  marinade_finance.ts
raw-marinade/programs/raw-marinade/: Cargo.toml
raw-marinade/programs/raw-marinade/src/: README.adoc  entrypoint.rs  lib.rs
raw-marinade/tests/: raw-marinade.ts
sdk-marinade/: Anchor.toml
sdk-marinade/programs/sdk-marinade/: Cargo.toml
sdk-marinade/programs/sdk-marinade/src/: README.adoc  lib.rs
sdk-marinade/tests/: sdk-marinade.ts
