[package]
name = "raw-marinade"
version = "0.1.0"
description = "No Anchor in program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "raw_marinade"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
arrayref = "0.3.6"
bincode = "1.3.2"
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
serde = "1.0.130"
serde_derive = "1.0.103"
solana-program = "1.14.4"
thiserror = "1.0"
